# pgbar

./: .clang-format  .clangd  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Makefile  QuickStart.md  QuickStart_zh.md  README.md  README_zh.md  sample.cpp  xmake.lua
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
cmake/: moveup.cmake  parse_version.cmake  pgbar.pc.in  pgbarConfig.cmake.in  uninstall.cmake.in
demo/: .gitignore  Makefile  blockbar.cpp  blockprogressbar.cpp  cxx11.cpp  cxx20.cpp  demo.cpp  dynamicbar.cpp  flowbar.cpp  how-to-use.cpp  iterate.cpp  multibar.cpp  progressbar.cpp  sample.cpp  scannerbar.cpp  spinbar.cpp  spinnerbar.cpp  sweepbar.cpp  unicode.cpp
docs/: QuickStart.md  QuickStart_zh.md  README_zh.md
include/: Makefile  pgbar.BlockBar.ixx  pgbar.Core.ixx  pgbar.DynamicBar.ixx  pgbar.FlowBar.ixx  pgbar.MultiBar.ixx  pgbar.ProgressBar.ixx  pgbar.SpinBar.ixx  pgbar.SweepBar.ixx  pgbar.ixx
include/pgbar/: BlockBar.hpp  DynamicBar.hpp  FlowBar.hpp  Indicator.hpp  MultiBar.hpp  ProgressBar.hpp  SpinBar.hpp  SweepBar.hpp  pgbar.hpp  range.hpp
include/pgbar/color/: Color.hpp
include/pgbar/details/assets/: Driver.hpp  DynContext.hpp  DynamicContext.hpp  TUI.hpp  TupleSlot.hpp
include/pgbar/details/charcodes/: CoWString.hpp  CodeChart.hpp  EncodedView.hpp  Font.hpp  Glyph.hpp  U8Raw.hpp  U8Text.hpp
include/pgbar/details/concurrent/: Backport.hpp  ExceptionBox.hpp  SharedLock.hpp  SharedMutex.hpp  Util.hpp
include/pgbar/details/config/: Core.hpp
include/pgbar/details/console/: TermContext.hpp
include/pgbar/details/console/escodes/: Color.hpp  Escodes.hpp
include/pgbar/details/core/: Core.hpp  Version.hpp
include/pgbar/details/io/: CharPipeline.hpp  OStream.hpp  Stringbuf.hpp
include/pgbar/details/prefabs/: BasicBar.hpp  BasicConfig.hpp  ManagedBar.hpp  TupleBar.hpp
include/pgbar/details/render/: AnimatedBuilder.hpp  AsyncSlot.hpp  Builder.hpp  CommonBuilder.hpp  Renderer.hpp  Runner.hpp
include/pgbar/details/traits/: Algorithm.hpp  Backport.hpp  C3.hpp  ConceptTraits.hpp  LinearInherit.hpp  TemplateList.hpp  TemplateSet.hpp  TypeList.hpp  TypeSet.hpp  Util.hpp
include/pgbar/details/types/: Types.hpp
include/pgbar/details/utils/: Backport.hpp  ScopeGuard.hpp  Util.hpp
include/pgbar/details/wrappers/: Backport.hpp  MovableRef.hpp  OptionWrapper.hpp  UniqueFunction.hpp
include/pgbar/exception/: Error.hpp
include/pgbar/option/: Option.hpp
include/pgbar/slice/: BoundedSpan.hpp  IterSpan.hpp  IteratorSpan.hpp  NumericSpan.hpp  ProxySpan.hpp  TrackedSpan.hpp
misc/: .gitignore  UTF-8-test.cpp  main.cpp
tests/: .gitignore  Makefile  ProgressBar_basic.cpp  ProgressBar_foreach.cpp  SpinnerBar_basic.cpp  Threadsafe.cpp  common.hpp  configs_Progress.cpp  configs_Spinner.cpp  detail_concurrency_ExceptionPipe.cpp  detail_concurrency_SharedMutex.cpp  detail_render_Builder_Progress.cpp  detail_render_Builder_Spinner.cpp  detail_render_Renderer.cpp  detail_utilities_StringBuffer.cpp  detail_utilities_formatting.cpp  detail_utilities_hex2rgb.cpp  detail_utilities_rgb2ansi.cpp  detail_wrappers_GenericWrapper.cpp  detail_wrappers_RenderFn.cpp  detail_wrappers_RenderFnWrapper.cpp  iterators_IterSpan.cpp  iterators_NumericSpan.cpp  iterators_ProxySpan.cpp  performance.cpp
